2011-11-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/scanner.c (legal_identifier) src/scanner.h src/stats.c:
	Make sure that the variable name produced by the "stats ... prefix"
	command is a legal identifier.
	Bug #3441395

2011-11-26  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/config.nt config/config.mgw: Sync with config.h created by
	autoconf.

	* src/msvc/Makefile: More complete install target. Add new variables
	to hold paths to external libraries.

	src/mingw/Makefile: Include index in gnuplot.pdf.

2011-11-26  Ethan A Merritt  <merritt@u.washington.edu>

	* term/cairo.trm: Revert the change of 2011-08-25 that tried to skip 
	empty vectors. The concept was sound but the implementation was not
	correct, leading to mysteriously missing lines.
	Bugfix.

2011-11-26  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/mingw/Makefile: Support building of the Japanese help file
	wgnuplot-ja.chm.

	* src/win/wpause.c: Remove local definition of TBOOLEAN.

	* docs/plotstyles.gnu: Prefer pngcairo over png terminal. Use font
	"Times New Roman" on Windows.

	* src/syscfg.h: All tested platforms (XP, Vista, 7) support '/' as
	directory separator.

	* src/eval.c (update_gpval_variables): New variable GPVAL_ENCODING.

	* term/gd.trm (gd_iconv): Silence const mismatch compiler warning
	in call to iconv by casting second argument to (void *).

2011-11-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/setshow.h src/unset.c src/axis.c src/graph3d.c src/plot3d.c
	src/set.c src/term.c: Deal with more FIXMEs.

	* src/axis.c src/axis.h src/mouse.c src/save.c src/set.c src/show.c
	term/canvas.trm term/js/gnuplot_mouse.js term/js/gnuplot_svg.js
	term/svg.trm demo/world.dem docs/gnuplot.doc:

	New coordinate mode for geographic (DMS) data axes. 
	`set xdata geographic` indicates that the x coordinate is to be
	interpreted as a geographic coordinate measured in degrees.
	Use `set format x` to establish how the coordinate appears as an axis